build: downgrade compilation target to Java 17 for runtime compatibility
Changed JVM release and target compatibility from 21 to 17 in build.gradle.
Upgraded Logger.java to use legacy Thread.getId() which is compatible across
Java 17 through 24+ runtimes.

This resolves java.lang.UnsupportedClassVersionError when executing the
built shadow JAR on local machines running Java 20.